# Rectangle-Program

./: CMakeLists.txt  Configurations.h  README.md  main.c
Lib/IO/: FileWriter.c  FileWriter.h  IO.c  IO.h
Lib/LinkedHashMap/: LinkedHashMap.c  LinkedHashMap.h
Lib/Operations/: Operations.c  Operations.h
Lib/Rectangle/: Rectangle.c  Rectangle.h
